# docs/swagger.json
@@ -333,35 +333,7 @@
                 }
             }
         },
-        "/posts/": {
-            "get": {
-                "description": "Get a list of posts of all users and threads",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "getting-posts"
-                ],
-                "summary": "Get all posts",
-                "operationId": "get-all-posts",
-                "responses": {
-                    "200": {
-                        "description": "Posts successfully received",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/posts.Post"
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Internal server error",
-                        "schema": {
-                            "$ref": "#/definitions/errs.SimpleErr"
-                        }
-                    }
-                }
-            },
+        "/posts": {
             "post": {
                 "security": [
                     {
@@ -405,6 +377,36 @@
                         "description": "Bad content",
                         "schema": {
                             "$ref": "#/definitions/errs.ComplexErrArr"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/errs.SimpleErr"
+                        }
+                    }
+                }
+            }
+        },
+        "/posts/": {
+            "get": {
+                "description": "Get a list of posts of all users and threads",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "getting-posts"
+                ],
+                "summary": "Get all posts",
+                "operationId": "get-all-posts",
+                "responses": {
+                    "200": {
+                        "description": "Posts successfully received",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/posts.Post"
+                            }
                         }
                     },
                     "500": {
